<resources>
    <string name="app_name">Open Space</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_rent">Rent</string>
    <string name="title_you">Profile</string>
    <string name="loading">loading...</string>
    <string name="progress">progress</string>
    <string name="facebook_app_id">504710129940256</string>
        <string name="mapkey">AIzaSyAMLlxSHPk394alVYAMAHYMgNyDppz7v-o</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="just_visit">Or Just Visit...</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</string>
    <string name="turn_on_location">Turn On Location!</string>
    <string name="turn_detail">So we can share you property and connect you with people in your area.</string>
    <string name="your_phone">YOUR PHONE LOCATION</string>
    <string name="enter_your_zipcode">ENTER YOUR ZIPCODE</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="next">Next</string>
    <string name="error_msg_location">Please Turn On Location</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="facebook_login_cancel">Facebook login cancel</string>
    <string name="error_in_facebook">Error in facebook login</string>
    <string name="error_in_gmail">Gmail login cancel</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="msg_error_fname">Please enter First Name</string>
    <string name="msg_error_lname">Please enter Last Name</string>
    <string name="msg_error_user_type">Please select User Type</string>
    <string name="msg_error_contact">Please enter Contact Number</string>
    <string name="msg_error_contact_length">Please enter 9 digit Contact Number</string>
    <string name="msg_error_email">Please enter valid Email</string>
    <string name="msg_error_old_pwd">Please enter Old password</string>
    <string name="msg_error_pwd">Please enter Password</string>
    <string name="msg_error_confirm_pwd">Please enter Confirm Password</string>
    <string name="msg_current_password">Please enter Current Password</string>
    <string name="msg_new_password">Please enter New Password</string>
    <string name="msg_confirm_password">Please enter Confirm Password</string>
    <string name="msg_match_password">New &amp; Confirm Password Not Match</string>
    <string name="msg_error_location">Please enter valid Location</string>
    <string name="msg_error_message">Please enter Message</string>
    <string name="msg_error_price">Please enter amount</string>
    <string name="msg_error_valid_pwd">Please enter Password must contains minimum 6 characters at least 1 Capital Alphabet, 1 Digit and 1 Special Character!!</string>
    <string name="pass_incorrect">Password not matching</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="storage_permission_needed">Camera and Storage Permission Needed</string>
    <string name="grant">Grant</string>
    <string name="enable">Enable</string>
    <string name="join_us_now">Join Us Now!</string>
    <string name="owner_property_detail">Owners who sale and purchase their \n property Here</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_dealer">Continue with Guest</string>
    <string name="i_agree_terms_and_conditions">I agree terms and conditions.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_you_email">Login With You Email</string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_pass">Change Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">ENTER YOUR PASSWORD</string>
    <string name="upload_your_image">Upload Your Image</string>
    <string name="first_name">FIRST NAME</string>
    <string name="first_name_small">First Name</string>
    <string name="last_name">LAST NAME</string>
    <string name="last_name_small">Last Name</string>
    <string name="enter_your_contact_no">Enter your Phone Number</string>
    <string name="back_to_login">Back to login</string>
    <string name="singup_here">Sell Your Property Here</string>
    <string name="slide_1_title">Property Sell\n Purchase</string>
    <string name="slide_1_desc">The easiest way to search property for rent.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="your_name">Your Name</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="search">Search</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="favourites">Favorites</string>
    <string name="dashborad">Dashboard</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="notification">Notifications</string>
    <string name="rate_us">Rate Us</string>
    <string name="like_us_on_facebook">Like Us on Facebook</string>
    <string name="like_us_on_twitter">Like Us on Twitter</string>
    <string name="version_1_1_1">Current Version 1.0</string>
    <string name="title">Title</string>
    <string name="private_information">Private Information</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string name="page">Page</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="msg_error_gender">Please select Gender</string>
    <string name="more_info">More Info</string>
    <string name="info_here">Info Here</string>
    <string-array name="bathroom">
        
        <item>1 Bathroom</item>
        <item>2 Bathrooms</item>
        <item>3 Bathrooms</item>
        <item>4 Bathrooms</item>
        <item>5 Bathrooms</item>
        <item>5+ Bathrooms</item>
    </string-array>
    <string-array name="bedroom">
        
        <item>1 Bedroom</item>
        <item>2 Bedrooms</item>
        <item>3 Bedrooms</item>
        <item>4 Bedrooms</item>
        <item>5 Bedrooms</item>
        <item>5+ Bedrooms</item>
    </string-array>
    <string name="other_info">Other Info</string>
    <string name="other">Other</string>
    <string name="your_selected_location_here">Your Selected Location Here</string>
    <string name="location">Location</string>
    <string name="commercial">Commercial</string>
    <string name="plot">Plot</string>
    <string name="home">Home</string>
    <string-array name="type">
        
        <item>Home</item>
        <item>Flat</item>
        <item>Commercial</item>
        <item>Condominium</item>
        <item>Single Family</item>
        <item>Townhouse</item>
        <item>Semi-detached House</item>
        <item>Duplex/Triplex</item>
    </string-array>
    <string name="short_sale">Short Sale</string>
    <string name="foreclosure_sale">Foreclosure Sale</string>
    <string name="wanted">Wanted</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sale">For Sale</string>
    <string name="purpose">Category</string>
    <string name="privates">Private</string>
    <string name="post">Post</string>
    <string name="owners">Owner</string>
    <string name="agent">Agent</string>
    <string name="investor">Investor</string>
    <string name="sell_type">Type of Sale</string>
    <string name="your_information">My Information</string>
    <string name="upload_images">Upload Images</string>
    <string name="upload_more_images">Upload More Images</string>
    <string name="upload_now">Upload Now</string>
    <string name="bank_owned_and_newly">Bank Owned &amp; Newly</string>
    <string name="asset_types">Asset Types</string>
    <string name="learn_more">Learn More</string>
    <string name="message">Message</string>
    <string name="feel_free_to_contact_us">Feel Free To Contact Us</string>
    <string name="send">Send</string>
    <string name="location_name">Location Name</string>
    <string name="city">City</string>
    <string name="documents">Documents</string>
    <string name="transition_details">Transaction Details</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_your_offer_price">Offer amount</string>
    <string name="make_your_office_here">Make Your Offer Here</string>
    <string name="close">Close</string>
    <string name="sell_property">List Property</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="you">You</string>
    <string name="chat">Conversations</string>
    <string name="buyer_seller">Buyer/Seller</string>
    <string name="renter">Renter</string>
    <string name="call">Call</string>
    <string name="contact_person">Contact Person</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login_here">Login Here</string>
    <string name="edit_info">Profile Information</string>
    <string name="you_need_to_login_first">You need to login First</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="cont">Continue</string>
    <string name="title_for_sale">List Property</string>
    <string name="walkthrough_details">Walkthrough Details</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="protype">Property Type:- </string>
    <string name="lvl_location">Location:-</string>
    <string name="change_date">Change Date</string>
    <string name="faq">FAQ</string>
    <string name="accept_term_and_condition">I agree Term and Condition</string>
    <string name="msg_make_offer_payment">Your initial token ($1500), will be refund if you or home owner reject offered by you,you can request for refund OS support will contact you</string>
    <string name="pay_1500_and_start_offer">Pay $1500 and start offer</string>
    <string name="select_language">Select Language</string>
    <string name="language_english">English</string>
    <string name="select_currency">Select Currency</string>
    <string name="search_by_country_name_or_currency_code">Search by country name, currency name or code</string>
    <string name="spanish">Spanish</string>
</resources>