<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tiltle_turn_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_with_you_email"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/title_turn_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/tiltle_turn_on"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/turn_detail" />

            <TextView
                android:id="@+id/ctv_your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/title_turn_detail"
                android:gravity="center|start"
                android:text="@string/enter_your_email"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/cet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/ctv_your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="14dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/title_enter_your_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cet_email"
                android:text="@string/enter_your_password"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/cet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/title_enter_your_zipcode"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="14dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    app:srcCompat="@drawable/right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@+id/ic"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_submit">

                <TextView
                    android:id="@+id/ctv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/forget_password" />


                <TextView
                    android:id="@+id/ctv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/sign_up" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
