<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/logo" />


    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/msg_make_offer_payment"
        android:textColor="@color/grey_600"
        android:textSize="@dimen/_13sdp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/pay_1500_and_start_offer"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/check_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_continue"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:text="@string/accept_term_and_condition" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/round_btn_solid"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</RelativeLayout>