<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/change_date"
        android:layout_marginEnd="@dimen/_2sdp"
        android:text="@string/title"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textColor="@color/grey_700"
        android:text="@string/date"
        android:textSize="12dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/date"
        android:layout_marginTop="4dp"
        android:background="@color/grey_400" />

    <TextView
        android:id="@+id/change_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_orange"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"
        android:text="@string/change_date"/>

</RelativeLayout>
