<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txvTtitleSelectCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/imgLogo"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:text="@string/select_currency"/>

    <EditText
        android:id="@+id/edtSearch"
        android:layout_below="@id/txvTtitleSelectCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_country_name_or_currency_code"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currencyListRV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/edtSearch"/>

    <TextView
        android:id="@+id/txvButtonSubmit"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/currencyListRV"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button_fad"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="@dimen/_14sdp"
        android:layout_margin="5dp"/>

</RelativeLayout>